manifests/menu/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: menu-backend
  name: menu-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: menu-backend
  template:
    metadata:
      labels:
        io.kompose.service: menu-backend
    spec:
      containers:
        - image: ghcr.io/startupnationlabs/micro-restaurant-nestjs-public/menu-service:a26c73ddefef351140ac49aacfa86c728ea5d190
          name: menu-backend
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
