manifests/menu/service.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: menu-backend
  name: menu-backend
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: menu-backend
