manifests/menu/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-menu-backend
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: menu-backend.spos.polytech.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  menu-backend
                port:
                  number: 3000
  tls:
    - hosts:
        - menu-backend.spos.polytech.apoorva64.com
      secretName: menu-backend.spos.polytech.apoorva64-tls
